RESOLVED FIXED298497
Built-in inline media controls on macOS do not match AVKit
https://bugs.webkit.org/show_bug.cgi?id=298497
Summary Built-in inline media controls on macOS do not match AVKit
phinehas133
Reported 2025-09-05 23:32:31 PDT
see title
Attachments
phinehas133
Comment 1 2025-09-05 23:32:33 PDT
phinehas133
Comment 2 2025-09-05 23:39:23 PDT
EWS
Comment 3 2025-10-14 13:08:34 PDT
Committed 301493@main (c1faece3098b): <https://commits.webkit.org/301493@main> Reviewed commits have been landed. Closing PR #50410 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.