Built-in inline media controls on macOS do not match AVKit https://bugs.webkit.org/show_bug.cgi?id=298497 rdar://156730307

Reviewed by Andy Estes.

Change volume-slider-container size and rounded corners to match AVKit. Move the mute button from
the bottom bar to the volume-slider-container. Create a pill shape thumb to match that of AVKit.
Use Display: flex and postion: relative for media-controls-container and controls-bar.bottom for
mac inline for easier positioning. Add new layout tests for the new media controls specs. Add a
feature flag to hide the changes until continuous corners are available in CSS to use instead of
border radius.

media/modern-media-controls/macos-inline-media-controls/macos-inline-media-controls-mute-button-in-volume-slider-container.html
media/modern-media-controls/macos-inline-media-controls/macos-inline-media-controls-volume-slider-container-hidden-when-mute-button-disabled.html
media/track/video-track-add-visible-new.html
* LayoutTests/http/tests/contentextensions/text-track-blocked-expected.txt:
* LayoutTests/http/tests/contentextensions/text-track-blocked.html:
* LayoutTests/media/modern-media-controls/audio/audio-controls-buttons-expected.txt:
* LayoutTests/media/modern-media-controls/audio/audio-controls-buttons.html:
* LayoutTests/media/modern-media-controls/macos-inline-media-controls/macos-inline-media-controls-layout-expected.txt:
* LayoutTests/media/modern-media-controls/macos-inline-media-controls/macos-inline-media-controls-layout.html:
* LayoutTests/media/modern-media-controls/macos-inline-media-controls/macos-inline-media-controls-mute-button-in-bottom-or-top-right-controls-bar-expected.txt:
* LayoutTests/media/modern-media-controls/macos-inline-media-controls/macos-inline-media-controls-mute-button-in-bottom-or-top-right-controls-bar.html:
* LayoutTests/media/modern-media-controls/macos-inline-media-controls/macos-inline-media-controls-mute-button-in-volume-slider-container-expected.txt: Copied from LayoutTests/media/modern-media-controls/macos-inline-media-controls/macos-inline-media-controls-mute-button-in-bottom-or-top-right-controls-bar-expected.txt.
* LayoutTests/media/modern-media-controls/macos-inline-media-controls/macos-inline-media-controls-mute-button-in-volume-slider-container.html: Copied from LayoutTests/media/modern-media-controls/macos-inline-media-controls/macos-inline-media-controls-mute-button-in-bottom-or-top-right-controls-bar.html.
* LayoutTests/media/modern-media-controls/macos-inline-media-controls/macos-inline-media-controls-placard-expected.txt:
* LayoutTests/media/modern-media-controls/macos-inline-media-controls/macos-inline-media-controls-placard.html:
* LayoutTests/media/modern-media-controls/macos-inline-media-controls/macos-inline-media-controls-top-right-controls-bar-hidden-when-mute-button-disabled-expected.txt:
* LayoutTests/media/modern-media-controls/macos-inline-media-controls/macos-inline-media-controls-top-right-controls-bar-hidden-when-mute-button-disabled.html:
* LayoutTests/media/modern-media-controls/macos-inline-media-controls/macos-inline-media-controls-volume-slider-container-hidden-when-mute-button-disabled-expected.txt: Added.
* LayoutTests/media/modern-media-controls/macos-inline-media-controls/macos-inline-media-controls-volume-slider-container-hidden-when-mute-button-disabled.html: Added.
* LayoutTests/media/modern-media-controls/macos-inline-media-controls/macos-inline-media-controls-volume-slider-visibility-expected.txt:
* LayoutTests/media/modern-media-controls/macos-inline-media-controls/macos-inline-media-controls-volume-slider-visibility.html:
* LayoutTests/media/modern-media-controls/macos-inline-media-controls/macos-inline-media-controls-volume-styles-expected.txt:
* LayoutTests/media/modern-media-controls/macos-inline-media-controls/macos-inline-media-controls-volume-styles.html:
* LayoutTests/media/modern-media-controls/media-controller/media-controller-click-on-video-controls-should-not-pause.html:
* LayoutTests/media/modern-media-controls/volume-support/volume-support-drag-to-mute.html:
* LayoutTests/media/track/video-track-add-visible-new-expected.txt: Added.
* LayoutTests/media/track/video-track-add-visible-new.html: Added.
* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:
* Source/WebCore/Modules/mediacontrols/MediaControlsHost.cpp:
(WebCore::MediaControlsHost::isMediaControlsMacInlineSizeSpecsEnabled const):
* Source/WebCore/Modules/mediacontrols/MediaControlsHost.h:
* Source/WebCore/Modules/mediacontrols/MediaControlsHost.idl:
* Source/WebCore/Modules/modern-media-controls/controls/macos-inline-media-controls.css:
(.media-controls.mac.inline.audio .volume-slider-container):
(.media-controls.mac.inline .volume-slider-container > .background-tint): Deleted.
* Source/WebCore/Modules/modern-media-controls/controls/macos-inline-media-controls.js:
(MacOSInlineMediaControls.prototype._setupVolumeSliderConfiguration):
(MacOSInlineMediaControls.prototype.findHostFromParent):
(MacOSInlineMediaControls.prototype.get mediaControlsHost):
(MacOSInlineMediaControls.prototype.layout):
(MacOSInlineMediaControls.prototype.handleEvent):
(MacOSInlineMediaControls.prototype.rightContainerButtons):
(MacOSInlineMediaControls):
* Source/WebCore/Modules/modern-media-controls/controls/media-controls.css:
(:host(audio) .media-controls.mac,): Deleted.
(.media-controls.mac.MacInlineSizeSpecs .controls-bar.bottom,): Deleted.
(.media-controls.mac.MacInlineSizeSpecs .controls-bar.bottom .background-tint,): Deleted.
* Source/WebCore/Modules/modern-media-controls/controls/slider.js:
* Source/WebCore/rendering/cocoa/RenderThemeCocoa.mm:
(WebCore::macOSInlineMediaControlsStyleSheet):
(WebCore::RenderThemeCocoa::mediaControlsStyleSheets):

Canonical link: https://commits.webkit.org/301493@main